# CVinRobocon2018

./: README.md
Modules/MLDecoder/: Decoder.cpp  Decoder.h  DecoderLabel.h
Modules/QRCodeRecognization/: CMakeLists.txt
Modules/QRCodeRecognization/src/: main.cpp
Modules/QRLocate/: CMakeLists.txt  ReadMe.md
Modules/QRLocate/src/: QRLocate.cpp  QRLocate.h  main.cpp
RoboconCV/: CMakeLists.txt  ReadMe.md
RoboconCV/MindVisionAPI/Include/: CameraApi.h  CameraApiLoad.h  CameraDefine.h  CameraGrabber.h  CameraImage.h  CameraStatus.h
RoboconCV/build(x64)/: ALL_BUILD.vcxproj  RoboconCV.sln  RoboconCV.vcxproj  RoboconCV.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
RoboconCV/src/: SerialPort.cpp  SerialPort.h  computeTime.cpp  computeTime.h  decoder.cpp  decoder.h  locator.cpp  locator.h  main.cpp  modeConfig.h  recognizer.cpp  recognizer.h
RoboconCV/src/SerialPort/: SerialPort.cpp  SerialPort.h
